<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.launch_mode_activities.EntryPoint">

    <TextView
        android:id="@+id/lm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/launch_mode"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/lm_standard_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#F4511E"
        android:text="@string/standard"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lm_single_top_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lm_title" />

    <Button
        android:id="@+id/lm_single_top_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#F4511E"
        android:text="@string/single_top"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lm_single_task_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lm_standard_button" />

    <Button
        android:id="@+id/lm_single_task_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="#F4511E"
        android:text="@string/single_task"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lm_single_instance_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lm_single_top_button" />

    <Button
        android:id="@+id/lm_single_instance_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#F4511E"
        android:text="@string/single_instance"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lm_single_task_button" />

    <ImageView
        android:id="@+id/close_icon"
        android:layout_width="25dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="43dp"
        app:layout_constraintEnd_toStartOf="@+id/lm_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>